[package]
name = "cel-contracts"
version = "0.2.0"
edition = "2021"
rust-version = "1.76"
license = "Apache-2.0"
authors = ["Dimitrios Pagkratis <dimitris@timberhub.com>"]
homepage = "https://github.com/dimpagk92/cel-contracts"
documentation = "https://docs.rs/cel-contracts"
repository = "https://github.com/dimpagk92/cel-contracts"
description = "Shared Rust contracts for AI agent actions, planning views, runtime capabilities, and execution receipts."
keywords = ["ai", "agent", "contracts", "receipts", "automation"]
categories = ["data-structures"]
readme = "README.md"

[dependencies]
cel-context = "0.2.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-trait = "0.1"
